css change tp fix alignment issue on user accounts form

--- a/themes/vivo-cornell/css/wilma.css
+++ b/themes/vivo-cornell/css/wilma.css
@@ -77,6 +77,15 @@ h5 {
 }
 
 /* ------------------------------------------------->  */
+/* for user accounts to align profile selection field  */
+/* ------------------------------------------------->  */
+#associateProfileBackgroundThree {
+margin-top: -112px;
+}
+#associateProfileBackgroundFour {
+margin-top: 0px;
+}
+/* ------------------------------------------------->  */
 /* CORNELL IDENTITY -------------------------------->  */
 /* ------------------------------------------------->  */
 #cu-identity {
